<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.CrearCuenta2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamaño_40"
            android:background="@drawable/background_top_fondo"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/tamaño_15"
            android:paddingEnd="@dimen/tamaño_15">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/tamaño_4"
                android:paddingStart="@dimen/tamaño_12"
                android:paddingEnd="@dimen/tamaño_12"
                android:text="@string/lbl_datosUniversitarios"
                android:textColor="@color/white"
                android:textSize="@dimen/letra_20"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/tamaño_20"
                    android:paddingTop="@dimen/tamaño_50"
                    android:paddingEnd="@dimen/tamaño_20">

                    <TextView
                        android:id="@+id/lbl_titulo1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/tamaño_5"
                        android:text="@string/lbl_datosPersonales"
                        android:textAlignment="center"
                        android:textColor="@color/blackTextColor"
                        android:textSize="@dimen/letra_20"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lbl_titulo2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/tamaño_5"
                        android:text="@string/lbl_llenarDatos"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/letra_16" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_Universidad" />

                            <Spinner
                                android:id="@+id/spinnerUniversidad"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_departamento" />

                            <Spinner
                                android:id="@+id/spinnerDepartamento"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_provincia" />

                            <Spinner
                                android:id="@+id/spinnerProvincia"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_Siguiente"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/tamaño_45"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/tamaño_50"
                        android:background="@drawable/bacground_boton_siguiente"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/tamaño_30"
                        android:paddingEnd="@dimen/tamaño_30">

                        <TextView
                            android:id="@+id/textBotonSiguiente"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_siguiente"
                            android:textColor="@color/white"
                            android:textSize="@dimen/letra_18"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_Error"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamaño_15"
            android:background="@color/colorOrange"
            android:text="@string/lbl_SinInternet"
            android:textColor="@color/white"
            android:textSize="@dimen/letra_10" />
    </LinearLayout>
</RelativeLayout>