<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.AgregarCursoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamaño_40"
            android:background="@drawable/background_top_fondo"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/tamaño_15"
            android:paddingEnd="@dimen/tamaño_15">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/tamaño_4"
                android:paddingStart="@dimen/tamaño_12"
                android:paddingEnd="@dimen/tamaño_12"
                android:text="@string/lbl_crear"
                android:textColor="@color/white"
                android:textSize="@dimen/letra_20"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/tamaño_20"
                    android:paddingTop="@dimen/tamaño_50"
                    android:paddingEnd="@dimen/tamaño_20">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/tamaño_5"
                        android:text="@string/lbl_curso"
                        android:textAlignment="center"
                        android:textColor="@color/blackTextColor"
                        android:textSize="@dimen/letra_20"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/tamaño_5"
                        android:text="@string/lbl_llenarDatos"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/letra_16" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txt_nombre"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/lbl_Nombre"
                                android:inputType="textAutoComplete"
                                android:textColor="@color/colorPrimaryText" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txt_creditos"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/lbl_creditos"
                                android:inputType="number"
                                android:maxLength="3"
                                android:textColor="@color/colorPrimaryText" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txt_dia"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/lbl_dia"
                                android:inputType="textAutoComplete"
                                android:textColor="@color/colorPrimaryText" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                               android:layout_weight="1"
                                android:id="@+id/txt_horaInicio"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="20dp"
                                app:passwordToggleEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/lbl_horaInicio"
                                    android:inputType="textAutoComplete"
                                    android:textColor="@color/colorPrimaryText" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <ImageButton
                                android:onClick="obtenerHora"
                                android:layout_width="wrap_content"
                                android:layout_height="62dp"

                                android:src="@drawable/ic_time" />
                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/txt_horaFin"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/lbl_HoraFin"
                                android:inputType="textAutoComplete"
                                android:textColor="@color/colorPrimaryText" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/lbl_periodo"
                                android:inputType="textAutoComplete"
                                android:textColor="@color/colorPrimaryText" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/lbl_seccion"
                                android:inputType="textAutoComplete"
                                android:textColor="@color/colorPrimaryText" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/lbl_ciclo"
                                android:inputType="textAutoComplete"
                                android:textColor="@color/colorPrimaryText" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_Siguiente"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/tamaño_45"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/tamaño_50"
                        android:background="@drawable/bacground_boton_siguiente"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/tamaño_30"
                        android:paddingEnd="@dimen/tamaño_30">

                        <TextView
                            android:id="@+id/textBotonSiguiente"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_guardar"
                            android:textColor="@color/white"
                            android:textSize="@dimen/letra_18"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_Error"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamaño_15"
            android:background="@color/colorOrange"
            android:text="@string/lbl_SinInternet"
            android:textColor="@color/white"
            android:textSize="@dimen/letra_10" />
    </LinearLayout>

</RelativeLayout>